--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.application.name=clothesstore
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.datasource.url=jdbc:postgresql://db:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-
+spring.jpa.database=postgresql
+spring.jpa.show-sql=true
 spring.mvc.static-path-pattern=/static/**
