added internal db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=clothesstore
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://db:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.jpa.database=postgresql
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.datasource.url=jdbc:postgresql://dpg-cpe3227sc6pc7398ph8g-a/database3_3hgh
+spring.datasource.username=database3_3hgh_user
+spring.datasource.password=ozmIQWcymblfAEFWFviiooG7FHd0Ehtm
+
 spring.mvc.static-path-pattern=/static/**
