--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.datasource.url=jdbc:postgresql://dpg-cpe3227sc6pc7398ph8g-a/database3_3hgh
-spring.datasource.username=database3_3hgh_user
-spring.datasource.password=ozmIQWcymblfAEFWFviiooG7FHd0Ehtm
+spring.datasource.url=jdbc:postgresql://coursework_db_d71o_user:PM8N2haovjVUu73J3uye9ya7bUMJQZFj@dpg-crtfrdogph6c73f6b0f0-a.oregon-postgres.render.com/coursework_db_d71o
+spring.datasource.username=coursework_db_d71o_user
+spring.datasource.password=PM8N2haovjVUu73J3uye9ya7bUMJQZFj
 
 spring.mvc.static-path-pattern=/static/**
