--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.datasource.url=jdbc:postgresql://coursework_db_d71o_user:PM8N2haovjVUu73J3uye9ya7bUMJQZFj@dpg-crtfrdogph6c73f6b0f0-a.oregon-postgres.render.com/coursework_db_d71o
+spring.datasource.url=jdbc:postgresql://coursework_db_d71o_user:PM8N2haovjVUu73J3uye9ya7bUMJQZFj@dpg-crtfrdogph6c73f6b0f0-a/coursework_db_d71o
 spring.datasource.username=coursework_db_d71o_user
 spring.datasource.password=PM8N2haovjVUu73J3uye9ya7bUMJQZFj
 
