--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.datasource.url=jdbc:postgresql://coursework_db_d71o_user:PM8N2haovjVUu73J3uye9ya7bUMJQZFj@dpg-crtfrdogph6c73f6b0f0-a/coursework_db_d71o
-spring.datasource.username=coursework_db_d71o_user
-spring.datasource.password=PM8N2haovjVUu73J3uye9ya7bUMJQZFj
+spring.datasource.url=jdbc:postgresql://postgres_43qh_user:lix1A34J6DzsUP3zdEUwJeFdTwsxS7nL@dpg-csurkc56l47c7381cbeg-a.oregon-postgres.render.com/postgres_43qh
+spring.datasource.username=postgres_43qh_user
+spring.datasource.password=lix1A34J6DzsUP3zdEUwJeFdTwsxS7nL
 
 spring.mvc.static-path-pattern=/static/**
