--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.datasource.url=jdbc:postgresql://postgres_43qh_user:lix1A34J6DzsUP3zdEUwJeFdTwsxS7nL@dpg-csurkc56l47c7381cbeg-a/postgres_43qh
+spring.datasource.url=jdbc:postgresql://dpg-csurkc56l47c7381cbeg-a.oregon-postgres.render.com/postgres_43qh
 spring.datasource.username=postgres_43qh_user
 spring.datasource.password=lix1A34J6DzsUP3zdEUwJeFdTwsxS7nL
 
